[gd_scene load_steps=2 format=3 uid="uid://b77e1mm4qh054"]

[ext_resource type="Script" path="res://addons/DebugLogger/Dock/FilterItem.gd" id="1_vyni0"]

[node name="FilterItem" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 44)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_vyni0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilterLineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter"

[node name="IsRegexCheckBox" type="CheckBox" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Regex"

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(44, 2.08165e-12)
layout_mode = 2
text = "X"

[connection signal="text_submitted" from="HBoxContainer/FilterLineEdit" to="." method="_on_filter_line_edit_text_submitted"]
[connection signal="toggled" from="HBoxContainer/IsRegexCheckBox" to="." method="_on_is_regex_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
